--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 #starCollected {
   font-size: 1.2rem;
   margin-top: 10px;
-  margin-right: 500px;
+  margin-right: 50px;
 }
 
 .modal {
@@ -107,4 +107,14 @@
 #overlay.active {
   opacity: 1;
   pointer-events: all;
+}
+
+#restart-game {
+  background-color: white;
+  color: black;
+  margin-bottom: 3px;
+  border-color: yellow;
+  font-size: 1.25rem;
+  margin-top: 10px;
+  margin-right: 200px;
 }
